--- a/SeeSharp/SeeSharp.BOL/SeeSharp.BO.csproj
+++ b/SeeSharp/SeeSharp.BOL/SeeSharp.BO.csproj
@@ -42,6 +42,12 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Dictionaries\" />
+    <Folder Include="Infrastructure\" />
+    <Folder Include="Managers\" />
+    <Folder Include="Resources\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
