--- a/SeeSharp/SeeSharp.WPF/App.config
+++ b/SeeSharp/SeeSharp.WPF/App.config
@@ -3,4 +3,10 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
     </startup>
+  <appSettings>
+    <add key="XmlFileDirectory" value="XmlFiles" />
+    <add key="XmlProfileFileName" value="profile.xml" />
+    <add key="XmlAchivmentsFileName" value="achivments.xml" />
+    <add key="SourceFilesDirectory" value="SourceFiles" />
+  </appSettings>
 </configuration>
